tests/type_errors/wrong_arity.sy
def main
: Int -> Int
: a = f ' a

def f
: Int -> Int -> Int
: a b = a + b

--+ expected exit status: 3
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ Int -> Int
--+ ----
--+ Int
--+ 
--+   1| def main
--+   2| : Int -> Int
--+   3| : a = f ' a
--+   4| 
--+ 
--+ 
